Build switch button for °C | °F

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <ul class="fw-light d-flex" id="temp-list">
           <li id="main-temp"></li>
           <li>
-            <a href="#" class="temp temp-unit" id="celsius">°C</a>
+            <a href="#" class="temp temp-unit active" id="celsius">°C</a>
             <span class="temp">|</span>
             <a href="#" class="temp temp-unit" id="fahrenheit">°F</a>
           </li>
