--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <title>Vanilla-Weather-APP</title>
   </head>
-  <body class="night">
+  <body>
     <div class="container row mx-auto p-0 ps-3 mt-5">
+      <!-- left side content -->
       <section id="weather-box-left" class="col-3 mt-3 ps-4">
         <form action="" method="get" class="mb-3 ms-2" id="search-form">
           <input type="text" class="border-0 rounded-5" id="search-bar" placeholder="Search for place" autocomplete="off" />
@@ -63,6 +64,7 @@
           </a>
         </div>
       </section>
+      <!-- right side content -->
       <section id="weather-box-right" class="container col-9 row m-0">
         <nav class="d-flex ms-5 align-items-center" id="weather-box-right-top">
           <p class="col-5" id="brand-logo-name">Toronto Forecast</p>
@@ -71,6 +73,7 @@
             <span class="cnBtn">Weather in</span>
             <span class="inputLocation"></span>
           </p>
+          <!-- dark mode switch button -->
           <div class="switch-wrapper col-2">
             <div class="sun"></div>
             <div class="toggle-wrapper">
@@ -80,18 +83,21 @@
             <div class="moon"></div>
           </div>
         </nav>
+        <!-- 7 days forecast -->
         <div id="weather-forecast" class="row"></div>
+        <!--daily weather detail-->
         <p class="ms-5 mb-0" id="weather-detail">Weather Detail</p>
+        <!-- top three box -->
         <ul class="weather-detail-list">
+          <li class="forecast-day mx-2 px-4 d-flex flex-column newbackground">
+            <p class="forecast-detail">Humidity</p>
+            <p><span id="humidityData" class="detail"></span></p>
+            <p></p>
+          </li>
           <li class="forecast-day mx-2 px-3 d-flex flex-column newbackground">
             <p class="forecast-detail">Temperature Max | Min</p>
             <p class="max-min-temp"><span class="material-symbols-outlined"> upgrade </span>: <span id="max-temp"></span>°C</p>
             <p class="max-min-temp"><span class="material-symbols-outlined" id="minTempUnit"> upgrade </span>: <span id="min-temp"></span>°C</p>
-          </li>
-          <li class="forecast-day mx-2 px-4 d-flex flex-column newbackground">
-            <p class="forecast-detail">Humidity</p>
-            <p><span id="humidityData" class="detail"></span>%</p>
-            <p>Normal <span>🤜</span></p>
           </li>
           <li class="forecast-day mx-2 px-3 d-flex flex-column newbackground">
             <p class="forecast-detail">Sunrise & Sunset</p>
@@ -99,14 +105,14 @@
             <p><span class="material-symbols-outlined sunsetIcon"> wb_twilight </span> <span id="sunSet" class="sunrise-set-time"></span> <span class="timeUnit"></span>PM</p>
           </li>
         </ul>
-
+        <!-- bottom three box -->
         <ul class="weather-detail-list" id="secondList">
           <li class="forecast-day mx-2 px-4 d-flex flex-column newbackground">
             <p class="forecast-detail">Weather Description</p>
             <p><span class="detail" id="weather-description"></span></p>
           </li>
           <li class="forecast-day mx-2 px-3 d-flex flex-column newbackground">
-            <p class="forecast-detail">Sunrise & Sunset</p>
+            <p class="forecast-detail">Pressure</p>
             <p><span id="weather-pressure" class="detail"></span> hPa</p>
           </li>
           <li class="forecast-day mx-2 px-3 d-flex flex-column newbackground">
@@ -116,6 +122,7 @@
         </ul>
       </section>
     </div>
+    <!-- bottom author link -->
     <p id="button-sign"><a href="https://github.com/FrankieZzzzz/Vanilla-Weather-APP"> Open-source code</a> by Frankie Zhong</p>
     <script src="src/js.js"></script>
   </body>
