fix the issue of change temperature for all content
It can not switch the temperature unit from C to F for all weather forecasts. There are two different situations when we click the C/F button. One is under the current location; the other is searching for a city. Add one if else statement and fix.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </li>
         </ul>
         <ul id="weather-box-left-detail" class="pt-2">
-          <li class="pt-4"><span class="material-symbols-outlined leftSideIcon"> sentiment_satisfied </span> Feels Like: <span id="weather-feeling-temp"></span>°C</li>
+          <li class="pt-4"><span class="material-symbols-outlined leftSideIcon"> sentiment_satisfied </span> Feels Like: <span id="weather-feeling-temp"></span>°</li>
           <li>
             <span class="material-symbols-outlined leftSideIcon"> calendar_month </span>
             <span id="weather-current-date"></span>
