Update CSS style for responsive

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <!-- 7 days forecast -->
         <div id="weather-forecast"></div>
         <!--daily weather detail-->
-        <p class="ms-5 mb-0" id="weather-detail">Weather Detail</p>
+        <p class="mb-0" id="weather-detail">Weather Detail</p>
         <!-- top three box -->
         <ul class="weather-detail-list">
           <li class="forecast-day mx-2 px-4 d-flex flex-column newbackground">
