--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="src/style.css" type="text/css" />
     <!-- AJAX -->
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+    <!-- Moment Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <title>Vanilla-Weather-APP</title>
   </head>
   <body>
@@ -55,8 +57,8 @@
             <span id="weather-current-date"></span>
           </li>
           <li id="weather-box-left-date">
-            <span id="current-date"></span>,
-            <span class="time-zone" id="current-time"></span>
+            <div id="current-date"></div>
+            <div class="time-zone" id="current-time"></div>
           </li>
         </ul>
         <hr id="left-side-line" />
